deploy_pkg/objects/bhanu9666__MoviesDB__c/bhanu9666__MoviesDB__c.object-meta.xml
<CustomObject>
    <label>Movies Database</label>
    <pluralLabel>Movies Database</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>Text</type>
        <label>Name</label>
    </nameField>
</CustomObject>