deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Cast__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Cast__c</fullName>
    <label>Cast</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>