deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Cast_Count__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Cast_Count__c</fullName>
    <label>Cast Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>