deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Category__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Telugu</fullName><default>true</default><label>Telugu</label></value>
            <value><fullName>Bollywood</fullName><label>Bollywood</label></value>
            <value><fullName>Hollywood</fullName><label>Hollywood</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>