deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Duration__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Duration__c</fullName>
    <label>Duration</label>
    <type>Text</type>
    <length>20</length>
</CustomField>