deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Duration_Minutes__c</fullName>
    <label>Duration Minutes</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>