deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__External_ID__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__External_ID__c</fullName>
    <label>External ID</label>
    <type>Text</type>
    <length>100</length>
    <unique>true</unique>
</CustomField>