deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Full_URL__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Full_URL__c</fullName>
    <label>Full URL</label>
    <type>Url</type>
</CustomField>