deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Genre_List__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Genre_List__c</fullName>
    <label>Genre List</label>
    <type>Text</type>
    <length>255</length>
</CustomField>