deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Genres__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Genres__c</fullName>
    <label>Genres</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Action</fullName><label>Action</label></value>
            <value><fullName>Comedy</fullName><label>Comedy</label></value>
            <value><fullName>Drama</fullName><label>Drama</label></value>
            <value><fullName>Thriller</fullName><label>Thriller</label></value>
            <value><fullName>Romance</fullName><label>Romance</label></value>
            <value><fullName>Sci-Fi</fullName><label>Sci-Fi</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>