deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Input_Language__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Input_Language__c</fullName>
    <label>Input Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Telugu</fullName><default>true</default><label>Telugu</label></value>
            <value><fullName>Tamil</fullName><label>Tamil</label></value>
            <value><fullName>Hindi</fullName><label>Hindi</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>