deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Is_Featured__c</fullName>
    <label>Is Featured</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>