deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Is_Top_10__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Is_Top_10__c</fullName>
    <label>Is Top 10</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>