deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Match_Score__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Match_Score__c</fullName>
    <label>Match Score</label>
    <type>Text</type>
    <length>20</length>
</CustomField>