deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Match_Score_Value__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Match_Score_Value__c</fullName>
    <label>Match Score Value</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>