deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Normalized_Rating__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Normalized_Rating__c</fullName>
    <label>Normalized Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>UA</fullName><default>true</default><label>UA</label></value>
            <value><fullName>U</fullName><label>U</label></value>
            <value><fullName>A</fullName><label>A</label></value>
            <value><fullName>Not_Rated</fullName><label>Not Rated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>