deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Title__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>255</length>
</CustomField>