deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Type__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Movie</fullName><default>true</default><label>Movie</label></value>
            <value><fullName>Series</fullName><label>Series</label></value>
            <value><fullName>Documentary</fullName><label>Documentary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>