deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Video_ID__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Video_ID__c</fullName>
    <label>Video ID</label>
    <type>Text</type>
    <length>50</length>
</CustomField>