deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__Year__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__Year__c</fullName>
    <label>Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>