deploy_pkg/objects/bhanu9666__MoviesDB__c/fields/bhanu9666__YouTube_Thumbnail_1280__c.field-meta.xml
<CustomField>
    <fullName>bhanu9666__YouTube_Thumbnail_1280__c</fullName>
    <label>YouTube Thumbnail</label>
    <type>Url</type>
</CustomField>